syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

enum ContactSectionName {
    option allow_alias = true;

    CONTACTSECTION_ERROR = 0;
    CONTACTSECTION_NAME = 1;
    CONTACTSECTION_EMAIL = 2;
    CONTACTSECTION_PHONE = 3;
    CONTACTSECTION_BITMESSAGE = 4;
    CONTACTSECTION_PROFILE = 5;
    CONTACTSECTION_URL = 6;
    CONTACTSECTION_ACCOMPLISHMENTS = 7;
}

enum ContactItemType {
    option allow_alias = true;

    CITEMTYPE_ERROR = 0;
    CITEMTYPE_PERSONAL = 1;
    CITEMTYPE_BUSINESS = 2;
    CITEMTYPE_NICKNAME = 3;
    CITEMTYPE_FACEBOOK = 4;
    CITEMTYPE_TWITTER = 5;
    CITEMTYPE_GOOGLE = 6;
    CITEMTYPE_PROFESSIONAL = 7;
}

enum ContactItemAttribute {
    option allow_alias = true;

    CITEMATTR_ERROR = 0;
    CITEMATTR_ACTIVE = 1;
    CITEMATTR_PRIMARY = 2;
}
